@@ -1,6 +1,14 @@
-$NetBSD: NEWS,v 1.11 2014/11/03 21:48:49 lukem Exp $
+$NetBSD: NEWS,v 1.12 2015/10/04 06:20:58 lukem Exp $
 
-This is tnftp version 20141104.
+This is tnftp version 20151004.
+
+Changes in tnftp 20141104 to 20151004:
+
+	Implement '-x xferbufsize' to set xferbuf size.
+
+	Add Server Name Indication (SNI) support for https.
+
+	Increase buffer limit used for response handling.
 
 Changes in tnftp from 20141031 to 20141104:
 
