@@ -1,5 +1,13 @@
-$NetBSD: ChangeLog,v 1.66 2014/11/03 21:48:49 lukem Exp $
+$NetBSD: ChangeLog,v 1.67 2015/10/04 06:20:58 lukem Exp $
 
+Sun Oct  4 06:19:25 UTC 2015	lukem
+
+	* Release as "tnftp 20151004".
+
+	* Merge NetBSD usr.bin/ftp from 20141026 to 20151003:
+		- Add  -x xferbufsize  to set xferbuf size.
+		- Add Server Name Indication (SNI) support for https.
+		- Increase buffer limit used for response handling.
 
 Mon Nov  3 21:43:20 UTC 2014	lukem
 
